--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -40,8 +40,10 @@
     padding:0px 30px 0px 30px;
 }
 
-.menu ul li:hover{
+.menu-nav ul li:hover{
     cursor: pointer;
+    color: #a3cc39;
+    transition: 0.2s
 }
 
 .button_loggin{
