--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,7 @@ html {
 
 
 body {
-  font-weight: 300;
-  line-height: 1.6;
+    background-image: url(./assets/Backgrounds/Bg_Header.png);
+    font-weight: 300;
+    line-height: 1.6;
 }
