--- a/src/app/components/landing-page/components/beneficios/beneficios.component.html
+++ b/src/app/components/landing-page/components/beneficios/beneficios.component.html
@@ -1,1 +1,37 @@
-<p>beneficios works!</p>
+
+<div class="beneficios-container">
+
+    <p class="title">Entre los beneficios que ofrecemos se encuentran <span class="carita">;)</span></p>
+    
+    <div class="beneficios-list">
+        <div class="item">
+            <img src="../../../../../assets/Ic_Hour.svg" alt="">
+            <p class="text">Flexibilidad Horaria</p>
+        </div>
+
+        <div class="item">
+            <img src="../../../../../assets/Ic_HomeOffice.svg" alt="">
+            <p class="text">Home Office</p>
+        </div>
+
+        <div class="item">
+            <img src="../../../../../assets/Ic_Workshops.svg" alt="">
+            <p class="text">Capacitaciones y Workshops</p>
+        </div>
+
+        <div class="item">
+            <img src="../../../../../assets/Ic_DrinkSnacks.svg" alt="">
+            <p class="text">Snacks, frutas y bebidas gratis</p>
+        </div>
+
+        <div class="item">
+            <img src="../../../../../assets/Ic_laptop.svg" alt="">
+            <p class="text">Semana Remota</p>
+        </div>
+
+        <div class="item">
+            <img src="../../../../../assets/Ic_brain.svg" alt="">
+            <p class="text">Trabajar en ultimas tecnologías</p>
+        </div>
+    </div>
+</div>
