Se llama a nuevo componente

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,3 +1,5 @@
 <home-component id="home-component"></home-component>
 
 <inicio-component id="inicio-component"></inicio-component>
+
+<beneficios-component id="beneficios-component"></beneficios-component>
