Se arma estructura de footer

--- a/src/app/components/landing-page/components/footer/footer.component.html
+++ b/src/app/components/landing-page/components/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+
+<div class="footer-container">
+    <p class="text_uno">Gracias por <span class="color_azul">completar el ejercicio</span></p>
+    
+    <p class="text_dos">Te invitamos a ver más información</p>
+    
+    <div class="button-container text_tres">
+        <a href="https://www.wolox.com.ar/" target="_blank">
+            <button class="button-conocer-mas">Conocer más</button>
+        </a>
+    </div>
+
+    <img class="text_cuatro" src="../../../../../assets/Ic_Wolox_Footer.svg">
+</div>
