--- a/src/styles.css
+++ b/src/styles.css
@@ -57,3 +57,45 @@ body {
     font-weight: 300;
     line-height: 1.6;
 }
+
+
+.button-container{
+    margin: 0 auto;
+}
+
+.button-container a{
+    text-decoration: none;
+}
+
+button{
+    font-family: MontserratSemiBold;
+    font-size: 1.7rem;
+    cursor: pointer;
+    outline: none;
+    font-weight: 700;
+    width: fit-content;
+    height: fit-content;
+    padding: 1rem 7rem ;
+    color: #2aa7df ;
+    border: 1px solid #2aa7df;
+    border-radius: 40px;
+    background-color: white;
+    transition: background-color 0.2s;
+    display: block ;
+  
+}
+
+button:hover {
+    background-color: #2aa7df;
+    color: white ;
+}
+
+.bg-transparent {
+    border: 2px solid #2aa7df;
+    background-color: transparent;
+    color: white;
+}
+
+.color_azul{
+    color: #2aa7df ;
+}
