Se agrega nuevo componente

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -3,3 +3,5 @@
 <inicio-component id="inicio-component"></inicio-component>
 
 <beneficios-component id="beneficios-component"></beneficios-component>
+
+<footer-component id="footer-component"></footer-component>
