Se modifica ubiacion de nav

--- a/src/app/components/landing-page/components/nav/nav.component.css
+++ b/src/app/components/landing-page/components/nav/nav.component.css
@@ -1,4 +1,4 @@
-@import './../../../assets/Fonts/fonts.css';
+@import '../../../../../assets/Fonts/fonts.css';
 
 .container-nav {
     display: flex;
