Se llama a nav en landing page

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,7 +1,12 @@
-<home-component id="home-component"></home-component>
+<nav-component></nav-component>
 
-<inicio-component id="inicio-component"></inicio-component>
+<home-component ></home-component>
 
-<beneficios-component id="beneficios-component"></beneficios-component>
+<inicio-component ></inicio-component>
 
-<footer-component id="footer-component"></footer-component>
+<beneficios-component ></beneficios-component>
+
+<footer-component ></footer-component>
+
+
+<router-outlet></router-outlet>
