Se restructura orden de carpetas

--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -1,4 +1,4 @@
-<nav-component></nav-component>
+
 
 <home-component ></home-component>
 
@@ -9,4 +9,4 @@
 <footer-component ></footer-component>
 
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
