--- a/src/app/modules/nav/components/nav.component.html
+++ b/src/app/modules/nav/components/nav.component.html
@@ -1,7 +1,7 @@
 
 <div class="container-nav">
     <div class="logo-nav">
-        <img src="../../../assets/logo_full_color.svg" alt="">
+        <img src="../../../../assets/logo_full_color.svg" alt="">
     </div>
 
     <div class="menu-nav">
