--- a/src/app/modules/landing-page/components/beneficios/beneficios.component.html
+++ b/src/app/modules/landing-page/components/beneficios/beneficios.component.html
@@ -16,12 +16,12 @@
 
         <div class="item">
             <img src="../../../../../assets/Ic_Workshops.svg" alt="">
-            <p class="text">Capacitaciones y Workshops</p>
+            <p class="text">Capacitaciones <br>y Workshops</p>
         </div>
 
         <div class="item">
             <img src="../../../../../assets/Ic_DrinkSnacks.svg" alt="">
-            <p class="text">Snacks, frutas y bebidas gratis</p>
+            <p class="text">Snacks, frutas <br>y bebidas gratis</p>
         </div>
 
         <div class="item">
@@ -31,7 +31,7 @@
 
         <div class="item">
             <img src="../../../../../assets/Ic_brain.svg" alt="">
-            <p class="text">Trabajar en ultimas tecnologías</p>
+            <p class="text">Trabajar <br>en ultimas <br>tecnologías</p>
         </div>
     </div>
 </div>
