Se actualiza ubicacion de nav

--- a/src/app/shared/loading/loading.component.html
+++ b/src/app/shared/loading/loading.component.html
@@ -1,1 +1,4 @@
-<p>loading works!</p>
+<div class="loader-container">
+    <div class="loader_blue"></div>
+    <div class="loader_green"></div>
+</div>
