--- a/src/app/shared/loading/loading.component.css
+++ b/src/app/shared/loading/loading.component.css
@@ -1,7 +1,28 @@
+
+.modal{
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+}
+
+.contenido{
+    margin: auto;
+    width: 20%;
+    height: 30%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;  
+}
+
 .loader-container{
     position: relative;
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
 }
 
@@ -11,7 +32,7 @@
     left: 50%;
     width: 100%;
     height: 100%;
-    border: solid 4px transparent;
+    border: solid 6px transparent;
     border-top-color: #a3cc39;
     border-left-color: #a3cc39;
     border-radius: 50%;
@@ -24,7 +45,7 @@
     left: 50%;
     width: 70%;
     height: 70%;
-    border: solid 4px transparent;
+    border: solid 6px transparent;
     border-top-color: #2aa7df;
     border-left-color: #2aa7df;
     border-radius: 50%;
