--- a/src/app/shared/loading/loading.component.html
+++ b/src/app/shared/loading/loading.component.html
@@ -1,4 +1,8 @@
-<div class="loader-container">
-    <div class="loader_blue"></div>
-    <div class="loader_green"></div>
+<div class="modal">
+    <div class="contenido">
+        <div class="loader-container">
+            <div class="loader">  </div>
+            <div class="loader_2">  </div>
+        </div>
+    </div>
 </div>
