Se importan nuevos componentes

--- a/src/app/modules/register-page/components/register-page.component.html
+++ b/src/app/modules/register-page/components/register-page.component.html
@@ -151,3 +151,7 @@
     </div>
 
 </div>
+
+<loading-component *ngIf="loading"></loading-component>
+<success-component *ngIf="success"></success-component>
+<error-component *ngIf="tError"></error-component>
