Se agrega boton para volver a home

--- a/src/app/modules/register-page/components/register-page.component.html
+++ b/src/app/modules/register-page/components/register-page.component.html
@@ -140,6 +140,10 @@
                     <div class="button-container">
                         <button type="submit" class="button-conocer-mas" (click)="enviar()">ENVÍAR</button>
                     </div>
+
+                    <div class="back_home">
+                        <a (click)="atras()">Regresar a pantalla inicial</a>
+                    </div>
                 </div>
             </form>
 
