Se agrega enlace a terminos y condiciones

--- a/src/app/modules/register-page/components/register-page.component.html
+++ b/src/app/modules/register-page/components/register-page.component.html
@@ -131,7 +131,7 @@
                 <div class="input-container">
                     <div class="combo_check">
                         <input type="checkbox" formControlName="terminosYcondiciones" class="check">
-                        <a href="../../../shared/termAndCondit/termAndCondit.html" _blank>Acepto términos y condiciones</a>
+                        <a href="https://terminosycondicionesdeusoejemplo.com/" target="_blank">Acepto términos y condiciones</a>
                     </div>
                     <p class="error" *ngIf="submitted && f.terminosYcondiciones.hasError('required')">Debe aceptar terminos y condiciones</p>
                 </div>
