Se cambia mensaje de login

--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -8,7 +8,7 @@
         <ul class="menu-ul-nav">
             <li>Inicio</li>
             <li>Beneficios</li>
-            <li class="button_loggin bg-transparent" (click)="register()">Login</li>
+            <li class="button_loggin bg-transparent" (click)="register()">Regístrate</li>
         </ul>
     </div>
 
@@ -30,7 +30,7 @@
         <ul>
             <li>Inicio</li>
             <li>Beneficios</li>
-            <li>Login</li>
+            <li  class="button_loggin bg-transparent" (click)="register()">Registrate</li>
         </ul>
     </div>
 </div>
