--- a/src/app/shared/nav/nav.component.css
+++ b/src/app/shared/nav/nav.component.css
@@ -8,6 +8,8 @@
     align-self: center;
     height: fit-content;
     padding: 30px 10%;
+    padding-left: 8%;
+    padding-right: 1%;
     width: 100%;
   
 }
