--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -9,7 +9,9 @@
             <li>Inicio</li>
             <li>Beneficios</li>
             <li [routerLink]="['/register']" class="button_loggin bg-transparent" *ngIf="!token">Regístrate</li>
-            <li [routerLink]="['/listado']" *ngIf="token">Listado</li>
+            <li [routerLink]="['/listado']" *ngIf="token">
+                Listado <span *ngIf="cantidadLike != 0"> - {{cantidadLike}}</span>
+            </li>
         </ul>
     </div>
 
