Se crea variable para obtener la cantidad de tecnologias a mostrar

--- a/src/app/modules/list-page/page/list-page.component.html
+++ b/src/app/modules/list-page/page/list-page.component.html
@@ -40,7 +40,7 @@
   </div>
 
   <div>
-    <p>Cantidad de tecnologias disponibles: {{_tecnObtenidas.length}}</p>
+    <p>Se visualizan {{_tecnologiasVisibles}} de {{_tecnObtenidas.length}} tecnolgías disponibles</p>
   </div>
 </div>
 
