--- a/src/app/shared/loading/loading.component.css
+++ b/src/app/shared/loading/loading.component.css
@@ -1,73 +1,81 @@
+.modal {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+}
 
-.modal{
+.contenido {
+  margin: auto;
+  width: 20%;
+  height: 30%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  border-radius: 10px;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .contenido {
     width: 100%;
     height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
+    border-radius: 0px !important;
+  }
 }
 
-.contenido{
-    margin: auto;
-    width: 20%;
-    height: 30%;
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    border-radius: 10px;
-    justify-content: center;
-    align-items: center;  
+.loader-container {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 10px;
 }
 
-.loader-container{
-    position: relative;
-    width: 100px;
-    height: 100px;
-    margin: 10px;
+.loader-container .loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  border: solid 6px transparent;
+  border-top-color: #a3cc39;
+  border-left-color: #a3cc39;
+  border-radius: 50%;
+  animation: loader 1.6s linear infinite;
 }
 
-.loader-container .loader{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    border: solid 6px transparent;
-    border-top-color: #a3cc39;
-    border-left-color: #a3cc39;
-    border-radius: 50%;
-    animation: loader 1.6s linear infinite;
+.loader-container .loader_2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 70%;
+  height: 70%;
+  border: solid 6px transparent;
+  border-top-color: #2aa7df;
+  border-left-color: #2aa7df;
+  border-radius: 50%;
+  animation: loader_2 1.2s linear infinite;
 }
 
-.loader-container .loader_2{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 70%;
-    height: 70%;
-    border: solid 6px transparent;
-    border-top-color: #2aa7df;
-    border-left-color: #2aa7df;
-    border-radius: 50%;
-    animation: loader_2 1.2s linear infinite;
+@keyframes loader {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
 }
 
-@keyframes loader{
-    0%{
-        transform: translate(-50%, -50%) rotate(0deg);
-    }
+@keyframes loader_2 {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
 
-    100%{
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-}
-
-@keyframes loader_2{
-    0%{
-        transform: translate(-50%, -50%) rotate(0deg);
-    }
-
-    100%{
-        transform: translate(-50%, -50%) rotate(-360deg);
-    }
+  100% {
+    transform: translate(-50%, -50%) rotate(-360deg);
+  }
 }
