--- a/src/app/modules/landing-page/components/inicio/inicio.component.html
+++ b/src/app/modules/landing-page/components/inicio/inicio.component.html
@@ -1,3 +1,4 @@
+<nav-component *ngIf="url == '/inicio'"></nav-component>
 
 <div class="inicio-container">
 
@@ -19,7 +20,7 @@
 
       <div class="button-container">
         <a href="https://twitter.com/Wolox" target="_blank">
-          <button class="bg-transparent">Siguenos</button>
+          <button class="bg-transparent" id="buttonSiguenos">Siguenos</button>
         </a>
       </div>
     </div>
