Se agrega id a boton

--- a/src/app/modules/landing-page/components/footer/footer.component.html
+++ b/src/app/modules/landing-page/components/footer/footer.component.html
@@ -6,7 +6,7 @@
   
   <div class="button-container text_tres">
     <a href="https://www.wolox.com.ar/" target="_blank">
-      <button class="button-conocer-mas">Conocer más</button>
+      <button class="button-conocer-mas" id="buttonConocerMas">Conocer más</button>
     </a>
   </div>
 
