--- a/src/app/modules/list-page/page/list-page.component.html
+++ b/src/app/modules/list-page/page/list-page.component.html
@@ -4,23 +4,23 @@
   <h1>Listado de Tecnologías</h1>
 
   <div class="filter-container">
-    <input type="text" class="input_filter" [formControl]="tecnologiasForm" placeholder="Buscar una tecnología" autocomplete="off">
+    <input type="text" class="input_filter" [formControl]="tecnologiasForm" placeholder="Buscar una tecnología" autocomplete="off" id="filterInputId">
 
     <div class="buttons_filter">
       <ul id="opc-flters">
-        <li (click)="filter('')">Todos</li>
-        <li (click)="filter('Front-End')">Front</li>
-        <li (click)="filter('Back-End')">Back</li>
-        <li (click)="filter('Mobile')">Mobile</li>
-        <li (click)="order('A')">A-Z</li>
-        <li (click)="order('Z')">Z-A</li>
+        <li id="filterTodosId" (click)="filter('')">Todos</li>
+        <li id="filterFrontId" (click)="filter('Front-End')">Front</li>
+        <li id="filterBackId" (click)="filter('Back-End')">Back</li>
+        <li id="filterMobileId" (click)="filter('Mobile')">Mobile</li>
+        <li id="filterAzId" (click)="order('A')">A-Z</li>
+        <li id="filterZaId" (click)="order('Z')">Z-A</li>
       </ul>
     </div>
   </div>
 
   <div class="list-container" >
       
-    <div class="item-container" *ngFor="let item of _listadoFiltrado">
+    <div class="item-container" *ngFor="let item of _listadoFiltrado" id="{{item.tech}}Id">
       <div class="item-wrap">
         <img src="{{ item.logo }}" class="img-fluid">
 
@@ -32,7 +32,7 @@
           <p>{{item.license}}</p>
           <p>{{item.language}}</p>
           <p>{{item.type}}</p>
-          <p (click)="liked(item.tech)">Button Like</p>
+          <p id="buttonLikeId" (click)="liked(item.tech)">Button Like</p>
         </div>
       </div>
     </div>
