--- a/src/app/modules/landing-page/landing-page.component.html
+++ b/src/app/modules/landing-page/landing-page.component.html
@@ -1,9 +1,9 @@
-<nav-component></nav-component>
+<nav-component id="home"></nav-component>
 
-<home-component ></home-component>
+<home-component></home-component>
 
-<inicio-component ></inicio-component>
+<inicio-component id="inicio"></inicio-component>
 
-<beneficios-component ></beneficios-component>
+<beneficios-component id="beneficios"></beneficios-component>
 
 <footer-component ></footer-component>
